Image to Webp Changes

--- a/second-chance/our-story.html
+++ b/second-chance/our-story.html
@@ -98,7 +98,7 @@
                 2016 and they made our number of six children turn into nine. Than while we were out on vacation visiting family in Utah, Idaho, and 
                 Oregon we were able to go to the Salt Lake City Temple on June 30, 2016 and have them sealed for time and all eternity to our family.
             </p>
-            <img class="wide_img" src="images/family/family5.jpg" alt="family4">
+            <img class="wide_img" src="images/family/family5.webp" alt="family4">
             <p>
                 The following October we found out that Trevor, Sawyer, and Aliciah's birth parents had had another son and we were contacted by DHS 
                 about taking placement and we said that we would. But by the time he was born and released from the hospital DHS decided to place him with 
