--- a/second-chance/past-rebuilds.html
+++ b/second-chance/past-rebuilds.html
@@ -102,7 +102,7 @@
     <header>
         <div class="top_row">
             <a href="index.html" id="logo_link1">
-                <img class="logo" src="images/logo.png" alt="Second Chance Logo" width="100" height="100">
+                <img class="logo" src="images/logo.webp" alt="Second Chance Logo" width="100" height="100">
             </a>
             <h1>Second Chance</h1>
         </div>
@@ -114,31 +114,6 @@
     </header>
     <main class="past-rebuilds">
         <div id="slideshow-container">
-                <!-- <div class="rebuild fade">
-                    <div class="numbertext">1 / 4</div>
-                    <img src="images/vehicle/bayou5.jpg" style="width:100%" alt="bayou_before">
-                    <img src="images/vehicle/bayou1.jpeg" style="width:100%" alt="bayou_after">
-                    <div class="text"></div>
-                </div>
-                </div>
-                <div class="rebuild fade">
-                    <div class="numbertext">2 / 4</div>
-                    <img src="images/vehicle/karma2.jpg" style="width:100%" alt="karma_before">
-                    <img src="images/vehicle/karma3.jpg" style="width:100%" alt="karma_after">
-                    <div class="text"></div>
-                </div>
-                <div class="rebuild fade">
-                    <div class="numbertext">3 / 4</div>
-                    <img src="images/vehicle/sabotage2.jpg" style="width:100%" alt="sabotage_before">
-                    <img src="images/vehicle/sabotage3.jpg" style="width:100%" alt="sabotage_after">
-                    <div class="text">I was able to build and design my dream Jeep with my dad. It was a fun process learning more about cars and how to fix them. Being able to be a part of the whole process was such a wonderful experience. My blood, sweat, and tears went into this project but, I wouldn't have it any other way. It gave me the opportunity to learn and grow and I wouldn't change this experience for the world.</div>
-                </div>
-                <div class="rebuild fade">
-                    <div class="numbertext">4 / 4</div>
-                    <img src="images/vehicle/solstice1.jpg" style="width:100%" alt="solstice_before">
-                    <img src="images/vehicle/solstice2.jpg" style="width:100%" alt="solstice_after">    
-                    <div class="text"></div>
-                </div> -->
         </div>
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -149,7 +124,6 @@
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
         </div>
-          
     </main>
     <footer>
         <h3>Second Chance &copy; 2024 - Spencer Reynolds</h3>
@@ -157,10 +131,10 @@
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon" width="64" height="64">
+                <img src="images/facebook.webp" alt="fb icon" width="64" height="64">
             </a>
             <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon" width="64" height="64">
+                <img src="images/instagram.webp" alt="instagram icon" width="64" height="64">
             </a>
         </div>
     </footer>
