--- a/second-chance/index.html
+++ b/second-chance/index.html
@@ -92,7 +92,7 @@
     <header>
         <div class="top_row">
             <a href="index.html" id="logo_link1">
-                <img class="logo" src="images/logo.png" alt="Second Chance Logo" width="100" height="100">
+                <img class="logo" src="images/logo.webp" alt="Second Chance Logo" width="100" height="100">
             </a>
             <h1>Second Chance</h1>
         </div>
@@ -110,21 +110,21 @@
                 This is done through the hard work of rebuilding and fixing up jeeps, which are then sold and used for scholarship money so the teen may attend college.
             </p>
             <div class="main_bayou">
-                <img class="main_img" src="images/vehicle/bayou.jpeg" alt="bayou_forest">
+                <img class="main_img" src="images/vehicle/bayou.webp" alt="bayou_forest">
             </div>
         </div>
         <div class="jeeps_main">
-            <img class="karma_moab" src="images/vehicle/karma1.jpg" alt="karma_moab">
-            <img class="sabotage_moab" src="images/vehicle/sabotage1.jpeg" alt="sabotage_moab">
+            <img class="karma_moab" src="images/vehicle/karma1.webp" alt="karma_moab">
+            <img class="sabotage_moab" src="images/vehicle/sabotage1.webp" alt="sabotage_moab">
         </div>
         <h2>Learn More About Second Chance</h2>
         <div class="contact">
             <div>
-                <img class="contact_icon" src="images/phone_icon.png" alt="phone_icon" width="64" height="64">
+                <img class="contact_icon" src="images/phone_icon.webp" alt="phone_icon" width="64" height="64">
                 <p>Cory's Phone Number<br>(563)-258-3504</p>
             </div>
             <div>
-                <img class="contact_icon" src="images/mail_icon.png" alt="mail_icon" width="64" height="64">
+                <img class="contact_icon" src="images/mail_icon.webp" alt="mail_icon" width="64" height="64">
                 <p>Email<br>reynolds_racing@yahoo.com</p>
             </div>
         </div>
@@ -135,10 +135,10 @@
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon" width="64" height="64">
+                <img src="images/facebook.webp" alt="fb icon" width="64" height="64">
             </a>
             <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon" width="64" height="64">
+                <img src="images/instagram.webp" alt="instagram icon" width="64" height="64">
             </a>
         </div>
     </footer>
