Pre-generation Image sizes

--- a/second-chance/index.html
+++ b/second-chance/index.html
@@ -110,12 +110,12 @@
                 This is done through the hard work of rebuilding and fixing up jeeps, which are then sold and used for scholarship money so the teen may attend college.
             </p>
             <div class="main_bayou">
-                <img class="main_img" src="images/vehicle/bayou.webp" alt="bayou_forest">
+                <img class="main_img" src="images/vehicle/bayou.webp" alt="bayou_forest" width="500" height="300">
             </div>
         </div>
         <div class="jeeps_main">
-            <img class="karma_moab" src="images/vehicle/karma1.webp" alt="karma_moab">
-            <img class="sabotage_moab" src="images/vehicle/sabotage1.webp" alt="sabotage_moab">
+            <img class="karma_moab" src="images/vehicle/karma1.webp" alt="karma_moab" width="500" height="300">
+            <img class="sabotage_moab" src="images/vehicle/sabotage1.webp" alt="sabotage_moab" width="500" height="300">
         </div>
         <h2>Learn More About Second Chance</h2>
         <div class="contact">
