--- a/second-chance/our-story.html
+++ b/second-chance/our-story.html
@@ -57,7 +57,7 @@
     <header>
         <div class="top_row">
             <a href="index.html" id="logo_link1">
-                <img class="logo" src="images/logo.png" alt="Second Chance Logo" width="100" height="100">
+                <img class="logo" src="images/logo.webp" alt="Second Chance Logo" width="100" height="100">
             </a>
             <h1>Second Chance</h1>
         </div>
@@ -129,10 +129,10 @@
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon" width="64" height="64">
+                <img src="images/facebook.webp" alt="fb icon" width="64" height="64">
             </a>
             <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon" width="64" height="64">
+                <img src="images/instagram.webp" alt="instagram icon" width="64" height="64">
             </a>
         </div>
     </footer>
