--- a/second-chance/index.html
+++ b/second-chance/index.html
@@ -110,21 +110,21 @@
                 This is done through the hard work of rebuilding and fixing up jeeps, which are then sold and used for scholarship money so the teen may attend college.
             </p>
             <div class="main_bayou">
-                <img class="main_img" src="images/vehicle/bayou.webp" alt="bayou_forest" width="500" height="300">
+                <img class="main_img" src="images/vehicle/bayou.webp" alt="Bayou Forest" width="500" height="300">
             </div>
         </div>
         <div class="jeeps_main">
-            <img class="karma_moab" src="images/vehicle/karma1.webp" alt="karma_moab" width="500" height="300">
-            <img class="sabotage_moab" src="images/vehicle/sabotage1.webp" alt="sabotage_moab" width="500" height="300">
+            <img class="karma_moab" src="images/vehicle/karma1.webp" alt="Karma Moab" width="500" height="300">
+            <img class="sabotage_moab" src="images/vehicle/sabotage1.webp" alt="Sabotage Moab" width="500" height="300">
         </div>
         <h2>Learn More About Second Chance</h2>
         <div class="contact">
             <div>
-                <img class="contact_icon" src="images/phone_icon.webp" alt="phone_icon" width="64" height="64">
+                <img class="contact_icon" src="images/phone_icon.webp" alt="Phone Icon" width="64" height="64">
                 <p>Cory's Phone Number<br>(563)-258-3504</p>
             </div>
             <div>
-                <img class="contact_icon" src="images/mail_icon.webp" alt="mail_icon" width="64" height="64">
+                <img class="contact_icon" src="images/mail_icon.webp" alt="Mail Icon" width="64" height="64">
                 <p>Email<br>reynolds_racing@yahoo.com</p>
             </div>
         </div>
