--- a/second-chance/our-story.html
+++ b/second-chance/our-story.html
@@ -70,7 +70,7 @@
     <main id="story_page">
         <h1>Our Story</h1>
         <div id="our_story">
-            <img src="images/family/family12.jpg" alt="family1">
+            <img src="images/family/family12.jpg" width="500" height="300" alt="family1">
             <p>
                 In 2015 we had a family council and decided together that we were going to become a Certified family to do Foster Care in Dubuque, Iowa.
             When I was in fourth grade one of my very best friends Lisa was a foster child. Unfortunately, she had a very bad experience with her 
@@ -79,7 +79,7 @@
             prepared to be certified. We took our classes during the months of October and November and were certified by January with our 
             certification stating that we were a Foster Family with the option to adopt.
             </p>
-            <img class="wide_img" src="images/family/family11.jpg" alt="family2">
+            <img class="wide_img" src="images/family/family11.jpg" width="500" height="300" alt="family2">
             <p>
                 Our very first call to take a placement was for two boys about to turn 2 and 4. They came to our home two weeks before their birthdays.
                 We were also told that their Mother was pregnant and we were asked if we would take placement of the baby when it was born. They were 
@@ -90,7 +90,7 @@
                 home to live with his Mom on November 20th.  We have stayed in touch with Jordan's mother and have shared pictures over social media. 
                 It was a joy to have Jordan in our home.
             </p>
-            <img  src="images/family/family9.jpg" alt="family3">
+            <img  src="images/family/family9.jpg" width="500" height="300" alt="family3">
             <p>
                 We continued to have Trevor, Sawyer, and Aliciah in our home and towards the end of the school year it was looking like their birth 
                 parents rights were going to be terminated since they had not worked on anything that the state had asked them to do to show that they 
@@ -98,7 +98,7 @@
                 2016 and they made our number of six children turn into nine. Than while we were out on vacation visiting family in Utah, Idaho, and 
                 Oregon we were able to go to the Salt Lake City Temple on June 30, 2016 and have them sealed for time and all eternity to our family.
             </p>
-            <img class="wide_img" src="images/family/family5.webp" alt="family4">
+            <img class="wide_img" src="images/family/family5.webp" width="500" height="300" alt="family4">
             <p>
                 The following October we found out that Trevor, Sawyer, and Aliciah's birth parents had had another son and we were contacted by DHS 
                 about taking placement and we said that we would. But by the time he was born and released from the hospital DHS decided to place him with 
@@ -110,7 +110,7 @@
                 The family their little brother was placed with had no intention of keeping in touch or letting our kids bond with their brother. It was a
                 hard ten months while we tried to right the wrong that we felt had taken place. We had to accept that we tried our best and move on.
             </p>
-            <img src="images/family/family6.jpg" alt="family2">
+            <img src="images/family/family6.jpg" width="500" height="300" alt="family2">
             <p>
                 We were asked to take placement of a 10-month-old boy on August 13, 2017, which we did take placement. It was very hard to say yes to 
                 this placement because he was close to the same age of our three sibling that we had just been told by the courts that we would not be 
